# cookie-clicker

./: .gitignore  .gitmodules  README.md  io.github.yesseruser.Cookie-Clicker.json  io.github.yesseruser.CookieClicker.json  meson.build
data/: io.github.yesseruser.Cookie-Clicker.desktop.in  io.github.yesseruser.Cookie-Clicker.gschema.xml  io.github.yesseruser.Cookie-Clicker.metainfo.xml.in  io.github.yesseruser.Cookie-Clicker.service.in  io.github.yesseruser.CookieClicker.desktop.in  io.github.yesseruser.CookieClicker.gschema.xml  io.github.yesseruser.CookieClicker.metainfo.xml.in  io.github.yesseruser.CookieClicker.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: cookie-clicker.gresource.xml  cookie-clicker.in  main.py  meson.build  window.py  window.ui
